--- a/notes/templates/notes/notes_form.html
+++ b/notes/templates/notes/notes_form.html
@@ -18,6 +18,9 @@
                  </div>
                  {% endif %}
            </div>
+           <div class="card-footer">
+               <a href="{% url 'notes.list' %}" class="btn btn-sm btn-primary">Back</a>
+           </div>
        </div>
     </di>
 </div>
