--- a/notes/templates/notes/notes_detail.html
+++ b/notes/templates/notes/notes_detail.html
@@ -2,11 +2,18 @@
 {% load static %}
 {% block content %}
 <div class="row justify-content-center">
-    <div class="col-d-6">
-        <div class="card-header">Note Details</div>
-        <div class="card-body">
-            <h1 class="fs-5">{{note.title}}</h1>
-            <p>{{note.text}}</p>
+    <div class="col-md-6">
+        <div class="card">
+           <div class="card-header">Note Details</div>
+           <div class="card-body">
+               <h1 class="fs-5">{{note.title}}</h1>
+               <p>{{note.text}}</p>
+           </div>
+           <div class="card_footer">
+                <a href="{% url 'notes.list' %}" class="btn btn-sm btn-primary">Back</a>
+                <a href="{% url 'notes.update' pk=note.id %}" class="btn btn-sm btn-warning">Edit</a>
+                <a href="{% url 'notes.delete' pk=note.id %}" class="btn btn-sm btn-danger">Delete</a>
+           </div>
         </div>
     </div>
 </div>
