--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -6,8 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
+  <style type="text/css">
+    body{
+    background-color: rgb(180, 176, 171);
+}
+  </style>
 <body>
+  
+     
+ 
+     <nav class="navbar navbar-dark bg-dark">
+        <div class="ms-auto">
+          {% if user.is_authenticated %}
+              <a href="{% url 'notes.list' %}" class="btn btn-outline-light" >Home</a>
+              <a href="{% url 'notes.new' %}" class="btn btn-outline-light">Create New Note</a>
+              <a href="{% url 'logout' %}" class="btn btn-outline-light">Logout</a>
+          {% else %}
+              <a href="{% url 'login' %}" class="btn btn-outline-light">Login</a>
+              <a href="{% url 'signup' %}" class="btn btn-outline-light">Signup</a>
+                 
+          {% endif %}
+        </div>
+     </nav>
+
      <div class="container my-5">
       {% block content%} 
    
