--- a/home/templates/home/logout.html
+++ b/home/templates/home/logout.html
@@ -3,10 +3,13 @@
 {% block content%} 
 
 <div class="row justify-content-center">
-    <div class="col-md-8">
-       <div class="logout text text-center">
-         <h1 class="fs-3">Hope to see you soon</h1>
-       </div>
+  <div class="col-md-8">
+    <div class="logout-text text-center">
+      <h1 class="fs-3">Hope to see yo soon</h1>
     </div>
+  </div>
 </div>
 {% endblock %}
+
+
+
