--- a/notes/templates/notes/notes_list.html
+++ b/notes/templates/notes/notes_list.html
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col">
       <div class="notes_list_heading text-center mb-5">
-        <h1 class="fs-4">These are the notes: </h1> 
+        <h1 class="fs-4">These are the notes </h1> 
       </div>
     </div>
 </div>
