--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/style.css'%}" type="text/css">
 </head>
   <style type="text/css">
     body{
