--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -7,17 +7,20 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" type="text/css" media="screen">
     <link rel="stylesheet" href="{% static 'css/style.css'%}" type="text/css">
+    
 </head>
-  <style type="text/css">
-    body{
-    background-color: rgb(180, 176, 171);
+<style type="text/css">
+  body{
+  background-color: lightcyan;
+  
 }
-  </style>
+</style>
 <body>
   
      
  
-     <nav class="navbar navbar-dark bg-dark">
+     <nav class="navbar navbar-success bg-success">
+      <img src="{% static 'C:\Users\CSS\Desktop\D_p\mysite\static\templates\notes.png'  %}" width="45.5" height="45.5">
         <div class="ms-auto">
           {% if user.is_authenticated %}
               <a href="{% url 'notes.list' %}" class="btn btn-outline-light" >Home</a>
@@ -30,10 +33,10 @@
           {% endif %}
         </div>
      </nav>
-
+     
      <div class="container my-5">
       {% block content%} 
-   
+      
       {% endblock %}
      </div>
   
