--- a/home/templates/home/welcome.html
+++ b/home/templates/home/welcome.html
@@ -6,8 +6,8 @@
     <div class="row">
         <div class="col">
             <div class="home-holder text-center">
-                <h1 class="fs-3"> Hollo world</h1>
-                <p>welcome to the note app</p>
+                <h1 class="fs-3">Welcome to the note app</h1>
+                  <p>To view your notes click Go to smart notes</p>
                 <a href=" {% url 'notes.list' %}" class="btn btn-success btn-sm"> Go to smart notes</a>
             </div>
         </div>
